# policygate-capital

./: .gitignore  Milestones.md  README.md  pyproject.toml
demos/: cpe_demo.py  demo_policy.yaml  paper_equities_flow.py
demos/fixtures/: intent_step1_allow.json  intent_step2_modify.json  intent_step3_deny_gross.json  intent_step4_drawdown.json  intent_step5_killed.json  market.json
deploy/compose/: Dockerfile  README.md  docker-compose.yml
docs/: architecture.md  audit_replay.md  contracts.md  policy_dsl.md
docs/schemas/: audit_event.schema.json  decision.schema.json  evidence.schema.json  execution_event.schema.json  execution_state.schema.json  instrument.schema.json  market_snapshot.schema.json  order_intent.schema.json  portfolio_state.schema.json  run_summary.schema.json  violation.schema.json
scenarios/drawdown_crash/: intents.jsonl  portfolio.json  run.py
scenarios/normal_day/: intents.jsonl  market.json  run.py
scenarios/throttle_burst/: intents.jsonl  policy.yaml  portfolio.json  run.py
src/policygate_capital/: __init__.py  cli.py  cli_run.py  cli_serve.py
src/policygate_capital/adapters/: alpaca_broker.py  broker.py  sim_broker.py  tradier_broker.py
src/policygate_capital/engine/: audit.py  decisions.py  evaluator.py  policy_engine.py  replay.py  rules.py
src/policygate_capital/models/: intent.py  policy.py  state.py
src/policygate_capital/runtime/: runner.py
src/policygate_capital/util/: errors.py  hashing.py  io.py
tests/: conftest.py  test_alpaca_broker.py  test_demo_golden.py  test_determinism.py  test_event_schemas.py  test_fail_closed.py  test_kill_switch.py  test_monitor_mode.py  test_replay.py  test_rules_execution.py  test_rules_exposure.py  test_rules_loss.py  test_runner.py  test_runner_chaos.py  test_scenarios.py  test_schema_validation.py  test_serve.py  test_tradier_broker.py
tests/fixtures/golden/: demo_audit.normalized.jsonl
tests/fixtures/intents/: buy_breach_gross_exposure.json  buy_breach_position_pct.json  buy_small.json  spam_orders.json  stream_10.jsonl
tests/fixtures/policies/: base_monitor.yaml  invalid_missing_fields.yaml  invalid_types.yaml  (+2 more)
tools/: correlate.py  stats.py
(+7 files in other folders)
