[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policygate-capital"
version = "0.2.0"
description = "Deterministic runtime capital governance for autonomous trading systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "PolicyGate" },
]
keywords = ["trading", "risk", "governance", "policy", "capital"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jsonschema>=4.0",
]
alpaca = [
    "alpaca-py>=0.21.0,<1.0",
]
tradier = [
    "requests>=2.28.0,<3.0",
]

[project.scripts]
policygate-eval = "policygate_capital.cli:main"
policygate-run = "policygate_capital.cli_run:main"
policygate-serve = "policygate_capital.cli_serve:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
